--- a/areas/hints/traits03_bench_AMD.org
+++ b/areas/hints/traits03_bench_AMD.org
@@ -12,6 +12,7 @@ Micro benchmarking [[https://blog.cloudflare.com/gen-12-servers/][Cloudflare's G
   - [[#baseline-intel-cpu-e5-1650][Baseline: Intel CPU E5-1650]]
   - [[#initial-test-amd-epyc-9684x][Initial test: AMD EPYC 9684X]]
 - [[#measured-cycles-vs-time][Measured: Cycles vs Time]]
+  - [[#instructions-per-cycle][Instructions per Cycle]]
 
 * Device Under Test (DUT)
 
@@ -175,4 +176,56 @@ Above table, shows the discrepancy. The adjusted cycles column is the calculated
 CPU cycles executed during Clock Boost. We see that the AMD 26 cycles(tsc) turns
 into 38 cycles with boost, which this doesn't affect the Intel CPU much.
 
+** Instructions per Cycle
 
+The rabbit hole is deeper.
+
+To understand and explain why the AMD CPU is having horrible performance
+compared to the Intel CPU, we first need to understand the *relationship*
+between *Cycles* and *Instructions*.
+
+*** Raw data: E5-1650
+
+#+begin_example
+# perf stat modprobe bench_traits_simple run_flags=$((2#010)) loops=800000000
+
+ Performance counter stats for 'modprobe bench_traits_simple run_flags=2 loops=800000000':
+
+          1,042.89 msec task-clock                       #    0.973 CPUs utilized             
+                 4      context-switches                 #    3.835 /sec                      
+                 1      cpu-migrations                   #    0.959 /sec                      
+               216      page-faults                      #  207.116 /sec                      
+     4,103,926,761      cycles                           #    3.935 GHz                       
+     7,226,819,844      instructions                     #    1.76  insn per cycle            
+     2,405,369,819      branches                         #    2.306 G/sec                     
+           141,927      branch-misses                    #    0.01% of all branches           
+
+       1.072254386 seconds time elapsed
+
+       0.000000000 seconds user
+       1.041577000 seconds sys
+#+end_example
+
+*** Raw data: AMD
+
+#+begin_example
+perf stat modprobe bench_traits_simple run_flags=$((2#010)) loops=180000000
+
+ Performance counter stats for 'modprobe bench_traits_simple run_flags=2 loops=180000000':
+
+          1,077.60 msec task-clock                       #    0.973 CPUs utilized          
+                 5      context-switches                 #    4.640 /sec                   
+                 1      cpu-migrations                   #    0.928 /sec                   
+               209      page-faults                      #  193.950 /sec                   
+     3,929,454,291      cycles                           #    3.646 GHz                    
+     3,006,632,749      stalled-cycles-frontend          #   76.52% frontend cycles idle   
+     2,187,968,487      instructions                     #    0.56  insn per cycle         
+                                                  #    1.37  stalled cycles per insn
+       905,772,907      branches                         #  840.547 M/sec                  
+       180,544,248      branch-misses                    #   19.93% of all branches        
+
+       1.107366645 seconds time elapsed
+
+       0.002052000 seconds user
+       1.072258000 seconds sys
+#+end_example
