--- a/areas/hints/traits03_bench_AMD.org
+++ b/areas/hints/traits03_bench_AMD.org
@@ -18,6 +18,7 @@ Micro benchmarking [[https://blog.cloudflare.com/gen-12-servers/][Cloudflare's G
 - [[#experiments-with-srso-modes][Experiments with SRSO modes]]
   - [[#spec_rstack_overflowoff][spec_rstack_overflow=off]]
   - [[#spec_rstack_overflowmicrocode][spec_rstack_overflow=microcode]]
+  - [[#spec_rstack_overflowibpb][spec_rstack_overflow=ibpb]]
 
 * Device Under Test (DUT)
 
@@ -451,3 +452,64 @@ This *microcode* mode gives same performance as *off* mode, when doing internal
 kernel function calls (=Kernel->Kernel= case)
 
 The =perf stat= looks the same as *off* mode.
+
+** spec_rstack_overflow=ibpb
+
+Mitigation IBPB via boot cmdline:
+ - =spec_rstack_overflow=ibpb=
+
+#+begin_example
+/sys/devices/system/cpu/vulnerabilities/spec_rstack_overflow:Mitigation: IBPB
+#+end_example
+
+The IBPB (Indirect Branch Prediction Barrier) in [[https://docs.kernel.org/admin-guide/hw-vuln/srso.html][kernel documentation]] for SRSO
+is described as *similar protection as "safe RET"*:
+
+- Similar protection as “safe RET” above but employs an IBPB barrier on
+  privilege domain crossings (User->Kernel, Guest->Host).
+
+- Mitigation: IBPB is another *full mitigation* type employing an indirect branch
+  prediction barrier after having applied the required microcode patch for one’s
+  system. This mitigation comes also at a performance cost.
+
+Table comparing mode "IBPB" vs "off":
+
+| *Mitigation: mode* | *IBPB* |  "off" |  *IBPB* |   "off" |
+| AMD EPYC 9684X     | cycles | cycles | nanosec | nanosec |
+|--------------------+--------+--------+---------+---------|
+| function call      |      3 |      3 |   1.356 |   1.356 |
+| indirect call      |     15 |     15 |   6.237 |   6.235 |
+| bpf_xdp_trait_set  |    111 |    111 |  43.925 |  43.742 |
+| bpf_xdp_trait_get  |     21 |     21 |   8.627 |   8.373 |
+
+It is a very *positive surprise* that (for this =kernel->kernel= use-case) the
+IBPB mode gives same performance as *off* mode. We were expecting high
+performance cost given documentation and that IBPB is usually considered a more
+secure mode for other mitigation setting.
+
+Quoting [[https://www.phoronix.com/news/AMD-Linux-Retbleed-STIBP-IBPB][phoronix]]:
+
+- "The IBPB-based protection for Retbleed is deemed the most secure but also the
+  highest performance impact [...]"
+
+It might be relevant to list the systems other mitigations:
+
+#+begin_example
+Vulnerabilities:
+  Gather data sampling:   Not affected
+  Itlb multihit:          Not affected
+  L1tf:                   Not affected
+  Mds:                    Not affected
+  Meltdown:               Not affected
+  Mmio stale data:        Not affected
+  Reg file data sampling: Not affected
+  Retbleed:               Not affected
+  Spec rstack overflow:   Mitigation; IBPB
+  Spec store bypass:      Mitigation; Speculative Store Bypass disabled via prctl
+  Spectre v1:             Mitigation; usercopy/swapgs barriers and __user pointer sanitization
+  Spectre v2:             Mitigation; Enhanced / Automatic IBRS; IBPB conditional; STIBP always
+                          -on; RSB filling; PBRSB-eIBRS Not affected; BHI Not affected
+  Srbds:                  Not affected
+  Tsx async abort:        Not affected
+#+end_example
+
