--- a/areas/mem/page_pool07_bench_DMA_fix.org
+++ b/areas/mem/page_pool07_bench_DMA_fix.org
@@ -7,6 +7,7 @@
 - [[#bench-a-on-e5-1650-bench_page_pool_simple][Bench-A on E5-1650: bench_page_pool_simple]]
   - [[#baseline-before-patchset][baseline: Before patchset]]
   - [[#pp01-dma-fix-v7][pp01-DMA-fix-v7]]
+  - [[#summary-cpu-e5-1650][Summary: CPU E5-1650]]
 - [[#practical][Practical]]
   - [[#building-benchmark][Building benchmark]]
 
@@ -90,6 +91,19 @@ Kernel:
 [  880.046528] bench_page_pool_simple: time_bench_page_pool03_slow(): in_serving_softirq fast-path
 [  888.385235] time_bench: Type:tasklet_page_pool03_slow Per elem: 299 cycles(tsc) 83.298 ns (step:0) - (measurement period time:8.329893717 sec time_interval:8329893717) - (invoke count:100000000 tsc_interval:29988024696)
 #+end_example
+
+** Summary: CPU E5-1650
+
+Benchmark (bench_page_pool_simple) results from before and after patchset.
+
+| Test name   | Cycles |       |      | Nanosec |        |        |      % |
+| (tasklet_*) | Before | After | diff |  Before |  After |   diff | change |
+|-------------+--------+-------+------+---------+--------+--------+--------|
+| fast_path   |     19 |    24 |    5 |   5.399 |  6.928 |  1.529 |   28.3 |
+| ptr_ring    |     54 |    79 |   25 |  15.090 | 21.976 |  6.886 |   45.6 |
+| slow        |    238 |   299 |   61 |  66.134 | 83.298 | 17.164 |   26.0 |
+#+TBLFM: $4=$3-$2::$7=$6-$5::$8=(($7/$5)*100);%.1f
+
 
 * Practical
 
