--- a/areas/mem/page_pool07_bench_DMA_fix.org
+++ b/areas/mem/page_pool07_bench_DMA_fix.org
@@ -8,6 +8,7 @@
   - [[#baseline-before-patchset][baseline: Before patchset]]
   - [[#pp01-dma-fix-v7][pp01-DMA-fix-v7]]
   - [[#summary-cpu-e5-1650][Summary: CPU E5-1650]]
+- [[#bench-b-on-e5-1650-patchset-1-5][Bench-B on E5-1650: patchset 1-5]]
 - [[#practical][Practical]]
   - [[#building-benchmark][Building benchmark]]
 
@@ -103,6 +104,32 @@ Benchmark (bench_page_pool_simple) results from before and after patchset.
 | ptr_ring    |     54 |    79 |   25 |  15.090 | 21.976 |  6.886 |   45.6 |
 | slow        |    238 |   299 |   61 |  66.134 | 83.298 | 17.164 |   26.0 |
 #+TBLFM: $4=$3-$2::$7=$6-$5::$8=(($7/$5)*100);%.1f
+
+* Bench-B on E5-1650: patchset 1-5
+
+Benchmark as requested in:
+ - https://lore.kernel.org/all/1bef4a35-efaa-4083-8ed5-8818fe285db5@huawei.com/
+
+Benchmark only patches 1-5
+ - From v7: https://lore.kernel.org/all/20250110130703.3814407-1-linyunsheng@huawei.com/
+
+And also remove the =rcu_read_lock= / =rcu_read_unlock= in =page_pool_napi_local=.
+
+#+begin_src C
+--- a/net/core/page_pool.c
++++ b/net/core/page_pool.c
+@@ -1207,10 +1207,8 @@ static bool page_pool_napi_local(const struct page_pool *pool)
+        /* Synchronizated with page_pool_destory() to avoid use-after-free
+         * for 'napi'.
+         */
+-       rcu_read_lock();
+        napi = READ_ONCE(pool->p.napi);
+        napi_local = napi && READ_ONCE(napi->list_owner) == cpuid;
+-       rcu_read_unlock();
+
+        return napi_local;
+ }
+#+end_src
 
 
 * Practical
